# mecha

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DatosCalientesMecha.db  LICENSE  LICENSE.md  Makefile  README.md  cmake_install.cmake
app Flutter/: .gitignore  LICENSE  README.md  pubspec.yaml
app Flutter/android/app/: build.gradle
app Flutter/ios/Runner/: Info.plist
app Flutter/ios/Runner.xcodeproj/: project.pbxproj
app Flutter/lib/: main.dart
app Flutter/lib/config/: codigo_cpp.dart  dark_theme.dart  light_theme.dart
app Flutter/lib/configuraciones/: codigo_cpp.dart  tema_claro.dart  tema_oscuro.dart
app Flutter/lib/controladores/: guardar_clase_backend.dart  guardar_usuario_backend.dart  iniciar_clave_correo.dart  iniciar_con_google.dart  leer_escribir_institutos.dart  leer_escribir_materias.dart  leer_escribir_periodos.dart  leer_guardar_apuntes_c.dart  (+1 more)
app Flutter/linux/: CMakeLists.txt  my_application.cc
app Flutter/test/: widget_test.dart
app Flutter/web/: index.html  manifest.json
app Flutter/windows/: CMakeLists.txt
jni/: Android.mk
lib/include/: Apunte.hpp  ArbolPadre.hpp  BaseMecha.hpp  Clase.hpp  Comentario.hpp  ManejoSqlite.hpp  Materia.hpp  NodoFuego.hpp  NodoPadre.hpp  Periodo.hpp  TablaHash.hpp  Usuario.hpp  Utilidades.hpp
lib/src/: Apunte.cpp  ArbolPadre.cpp  BaseMecha.cpp  Clase.cpp  Comentario.cpp  HashTable.cpp  HashTable.hpp  ManejoSqlite.cpp  Materia.cpp  Mecha.cpp  NodeFire.cpp  NodoFuego.cpp  NodoPadre.cpp  Periodo.cpp  Semestre.cpp  TablaHash.cpp  Usuario.cpp  Utilidades.cpp
main/src/: Mecha.cpp
test/src/: Mecha.cpp
(+87 files in other folders)
